fixed trace tables storing object references, causing issues with rendering; fixed array store using executor instead of component type